--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,8 +1,11 @@
+@import "./vars.css";
+
+
 .hero{
     text-align: center;
     padding: 100px 20px;
-    background-color: #0d0d0d;
-    color: #fff;
+    background-color: var(--color-bg);
+    color: var(--color-text);
 }
 
 .hero h1{
@@ -36,17 +39,4 @@
 
 .cta:hover{
     background: #6a5acd;
-}
-.hero-buttons .button{
-    padding: 10px 20px;
-    margin: 0 10px;
-    background-color: #007bff;
-    color: white;
-    text-decoration: none;
-    border-radius: 5px;
-    font-weight: bold;
-}
-
-.hero-buttons .button.secondary {
-    background-color: #6c757d;
 }
