--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 @import "./vars.css";
 
-.App{
+.App {
   background-color: var(--color-bg);
   width: 100%;
-  height: 100%;
+  min-height: 100vh;
+  position: relative;
+}
+
+.content {
+  position: relative;
+  z-index: 1;
+  background-color: transparent;
 }
