--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,6 +1,5 @@
 @import "./vars.css";
 
-
 .hero{
     text-align: center;
     padding: 100px 20px;
@@ -24,7 +23,7 @@
     margin-bottom: 30px;
 }
 
-.cta {
+.cta { /*button*/
     padding: 15px 30px;
     background-color: #1e1e1e;
     border:1px solid #6a5acd;
@@ -34,9 +33,18 @@
     cursor: pointer;
     box-shadow: 0 0 30px #6a5acd;
     transition: all 0.2s ease;
-
 }
 
 .cta:hover{
     background: #6a5acd;
 }
+.hero-buttons .button{
+    padding: 10px 20px;
+    margin: 0 10px;
+    background-color: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    font-weight: bold;
+}
+
