--- a/src/vars.css
+++ b/src/vars.css
@@ -2,6 +2,8 @@
     /*colours*/
     --color-text: #fff;
     --color-bg: #1d1d1d;
+    --color-purple: #6a5acd;
+    --color-pink: #f06292;
     /*ADD MORE*/
     /*font*/
     --font-pop: "poppins";
