--- a/src/Hero.css
+++ b/src/Hero.css
@@ -2,7 +2,7 @@
 
 .hero{
     text-align: center;
-    padding: 100px 20px;
+    padding: 200px 20px;
     background-color: var(--color-bg);
     color: var(--color-text);
 }
@@ -13,7 +13,7 @@
 }
 
 .gradient-text {
-    background: linear-gradient(90deg, #6a5acd, #f06292);
+    background: linear-gradient(90deg, var(--color-purple), var(--color-pink));
     background-clip: text;
     -webkit-text-fill-color: transparent; 
 }
@@ -26,23 +26,23 @@
 .cta { /*button*/
     padding: 15px 30px;
     background-color: #1e1e1e;
-    border:1px solid #6a5acd;
-    color: white;
+    border:1px solid var(--color-purple);
+    color: var(--color-text);
     border-radius: 40px;
     font-size: 1rem;
     cursor: pointer;
-    box-shadow: 0 0 30px #6a5acd;
+    box-shadow: 0 0 30px var(--color-purple);
     transition: all 0.2s ease;
 }
 
 .cta:hover{
-    background: #6a5acd;
+    background: var(--color-purple);
 }
 .hero-buttons .button{
     padding: 10px 20px;
     margin: 0 10px;
     background-color: #007bff;
-    color: white;
+    color: var(--color-text);
     text-decoration: none;
     border-radius: 5px;
     font-weight: bold;
