--- a/src/Exp.css
+++ b/src/Exp.css
@@ -7,7 +7,23 @@
 }
 
 .experience h1{
-    padding-bottom: 20px;
+    /* padding-bottom: 20px;
+    font-size: 2rem; */
+    display: flex;
+    align-items:center;
+    gap: 0.4rem;
+    font-size: 2rem;
+}
+
+.experience h1::after{
+ /*adds divider*/
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #8892b0;
+  opacity: 0.3;
+
+
 }
 
 .exp-item{
@@ -15,20 +31,26 @@
     border-radius: 20px;
     padding: 2rem;
     margin-bottom: 30px;
+    display: flex;
+    align-items:flex-start;
+    gap: 0.4rem;
 
 }
 
 .exp-item:hover{
-    background-color: rgba(106,90,205,0.2)
-    
+    background-color: rgba(106,90,205,0.2);
 }
 
 .exp-date{
     color: var(--color-purple);
+    min-width: 200px;
 }
 
+.exp-info{
+    flex: 1;
+}
 .exp-info h3{
-    margin-bottom: 20px;
+    margin-bottom: 5px;
 }
 
 
@@ -37,8 +59,6 @@
     padding: 5px;
 
 }
-
-
 
 .exp-info li{
     padding: 5px;
