--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,19 +1,42 @@
 @import "./vars.css";
 .contact-section{
+    /* padding: 200px 20px;
+    background-color: var(--color-bg);
+    color: var(--color-text);
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    min-height: 100vh; */
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    min-height: 100vh;
     padding: 200px 20px;
     background-color: var(--color-bg);
     color: var(--color-text);
+    text-align: center;
+   
+}
+
+.contact-section h2, contact-section h3{
+    text-align: center;
+    width: 100%;
 }
 
 .contact-section p{
     display: flex;
     text-align: center;
-
 }
 
 .icons{
     text-align: center;
-
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    margin: 30px 0;
 }
 
 .fa-brands.fa-github{
@@ -29,16 +52,23 @@
 .fa-solid.fa-envelope{
     color: var(--color-purple);
     padding: 20px;
-
 }
 
 .fa-brands.fa-linkedin{
     color: var(--color-purple);
     padding: 20px;
-
 }
 
-.banner p{
-    font-size: 0.7rem;
+.footer {
+    margin-top: 400px;
+    
+    width: 100%;
     text-align: center;
+    border: solid red;
+}
+
+.footer p {
+    text-align: center;
+    font-size: 0.7rem;
+    margin: 0;
 }
