--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,5 +1,19 @@
 @import "./vars.css";
-.contact-section{
+
+*{
+    padding: 100;
+    margin: 0;
+    box-sizing: border-box;
+
+}
+
+.footer{
+    border-top: solid white;
+    
+}
+
+
+/* .contact-section{ */
     /* padding: 200px 20px;
     background-color: var(--color-bg);
     color: var(--color-text);
@@ -8,7 +22,7 @@
     flex-direction: column;
     align-items: center;
     min-height: 100vh; */
-    flex: 1;
+    /* flex: 1;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -19,9 +33,9 @@
     color: var(--color-text);
     text-align: center;
    
-}
+} */
 
-.contact-section h2, contact-section h3{
+/*.contact-section h2, contact-section h3{
     text-align: center;
     width: 100%;
 }
@@ -72,3 +86,4 @@
     font-size: 0.7rem;
     margin: 0;
 }
+*/
