--- a/src/work.css
+++ b/src/work.css
@@ -5,15 +5,28 @@
     color: var(--color-text);
     padding-top: 200px;
     padding-bottom: 200px;
-    display:flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 2rem;
+}
+
+.work-section h2{
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+}
+
+.work-items-container {
+    display: flex;
     flex-wrap: wrap;
     justify-content: center;
     gap: 2rem;
-
 }
 
 .work-item{
-    border: solid white;
+    border: var(--color-text);
+    border-radius: 20px;
     display: flex;
     align-items:center;
     flex-direction: column;
@@ -21,10 +34,12 @@
     gap: 0.2rem;
     margin-bottom: 20px;
     padding: 1rem;
+    background-color: rgba(106,90,205,0.2);
 
 }
 .work-info{
     flex: 1;
+    
 
 }
 
