--- a/src/Contact.css
+++ b/src/Contact.css
@@ -13,18 +13,15 @@
 }
 
 
-/* .contact-section{ */
-    /* padding: 200px 20px;
+.contact-section{ 
+    padding: 200px 20px;
     background-color: var(--color-bg);
     color: var(--color-text);
     text-align: center;
     display: flex;
     flex-direction: column;
     align-items: center;
-    min-height: 100vh; */
-    /* flex: 1;
-    display: flex;
-    flex-direction: column;
+    min-height: 100vh; 
     justify-content: space-between;
     align-items: center;
     min-height: 100vh;
@@ -33,9 +30,8 @@
     color: var(--color-text);
     text-align: center;
    
-} */
-
-/*.contact-section h2, contact-section h3{
+} 
+.contact-section h2, contact-section h3{
     text-align: center;
     width: 100%;
 }
@@ -74,16 +70,13 @@
 }
 
 .footer {
-    margin-top: 400px;
-    
-    width: 100%;
-    text-align: center;
+    margin-top: 200px;
     border: solid red;
 }
 
 .footer p {
-    text-align: center;
+   
+    justify-content: center;
     font-size: 0.7rem;
-    margin: 0;
+    
 }
-*/
