--- a/src/App.css
+++ b/src/App.css
@@ -5,10 +5,21 @@
   width: 100%;
   min-height: 100vh;
   position: relative;
+  overflow-x: hidden;
 }
 
 .content {
   position: relative;
-  z-index: 1;
+  z-index: 2;
   background-color: transparent;
+}
+
+.particles {
+  position: fixed !important;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  pointer-events: none;
 }
