--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -40,7 +40,7 @@
 
 
 .navbar a { /*for everything instead navbar*/
-  color: #f6f4e6;
+  color: var(--color-text);
   text-decoration: none;
   font-size: 1rem;
   display: inline-block;
