--- a/src/work.css
+++ b/src/work.css
@@ -3,24 +3,42 @@
 .work-section{
     background-color: var(--color-bg);
     color: var(--color-text);
-    padding-top: 200px;
-    padding-bottom: 200px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 2rem;
+    width: 100%;
+    margin:auto;
+    padding: 8rem;
 }
 
 .work-section h2{
-    padding: 20px;
-    text-align: center;
+    display: flex;
+    align-items: center;
+    gap: 0.4rem;
+    font-size: 2rem;
+    width: 100%;
+    text-align: left;
+}
+
+.work-section h2::after{
+    content: "";
+    flex: 1;
+    height: 1px;
+    background: #8892b0;
+    opacity: 0.3;
+    max-width: 90%;
+}
+
+.work-section h3{
+    text-align: left;
     width: 100%;
 }
 
 .work-items-container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     gap: 2rem;
 }
 
@@ -35,12 +53,9 @@
     margin-bottom: 20px;
     padding: 1rem;
     background-color: rgba(106,90,205,0.2);
-
 }
 .work-info{
     flex: 1;
-    
-
 }
 
 .work-img img{
@@ -48,5 +63,4 @@
     height: 100px;
     object-fit: cover;
     border-radius: 10px;
-    
 }
