--- a/src/Contact.css
+++ b/src/Contact.css
@@ -1,17 +1,5 @@
 @import "./vars.css";
 
-*{
-    padding: 100;
-    margin: 0;
-    box-sizing: border-box;
-
-}
-
-.footer{
-    border-top: solid white;
-    
-}
-
 
 .contact-section{ 
     padding: 200px 20px;
@@ -31,15 +19,8 @@
     text-align: center;
    
 } 
-.contact-section h2, contact-section h3{
-    text-align: center;
-    width: 100%;
-}
 
-.contact-section p{
-    display: flex;
-    text-align: center;
-}
+
 
 .icons{
     text-align: center;
@@ -70,13 +51,12 @@
 }
 
 .footer {
-    margin-top: 200px;
+    /*margin-top: 200px;*/
     border: solid red;
+    
 }
 
 .footer p {
-   
     justify-content: center;
     font-size: 0.7rem;
-    
 }
