--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -32,6 +32,9 @@
     justify-content: space-between;
     align-items: center;
     background-color: #1b1b1b;
+    position: fixed;
+    top: 0;
+    width: 100%;
     
     padding: 1rem 2rem;
     color: var(--color-text);
@@ -55,6 +58,7 @@
   color: var(--color-pink);
   font-weight: 400;
   transform: scale(1.15);
+  cursor: pointer;
 }
 
 .logo{
