--- a/src/vars.css
+++ b/src/vars.css
@@ -1,9 +1,9 @@
 :root {
     /*colours*/
     --color-text: #fff;
-    --color-bg: #1d1d1d;
-    --color-purple: #6a5acd;
-    --color-pink: #f06292;
+    --color-bg: #0d0b1f;
+    --color-purple: #a259ff;
+    --color-pink: #ff4ecd;
     /*ADD MORE*/
     /*font*/
     --font-pop: "poppins";
