--- a/src/Contact.css
+++ b/src/Contact.css
@@ -17,7 +17,6 @@
     background-color: var(--color-bg);
     color: var(--color-text);
     text-align: center;
-   
 } 
 
 
@@ -52,11 +51,17 @@
 
 .footer {
     /*margin-top: 200px;*/
-    border: solid red;
     
+    margin-top: auto;
+    text-align: center;
+    padding: 1rem 0;
+    font-size: 0.8rem;
 }
+    
+
 
 .footer p {
     justify-content: center;
     font-size: 0.7rem;
+    
 }
