--- a/src/Hero.css
+++ b/src/Hero.css
@@ -8,17 +8,18 @@
 }
 
 .hero h1{
-    font-size: 3rem; 
-    margin-bottom: 20px;
+    font-size: 4rem; 
+    padding:20px;
 }
 
 .hero h2{
-    text-align: left; 
-    padding-left: 50px;
+    text-align: center;
+    display: flex;
+    justify-content: center; 
 }
 .hero h3{
-    text-align: right;
-    padding: 40px;
+    text-align: center;
+    padding-bottom: 50px;
 }
 .gradient-text {
     background: linear-gradient(90deg, var(--color-purple), var(--color-pink));
