--- a/src/Hero.css
+++ b/src/Hero.css
@@ -14,47 +14,26 @@
 
 }
 
-
-/* .name-block {
+.name-block{
   display: flex;
-
+  align-items: flex-start;
+  flex-direction: column;
 }
 
-.name-block h1 {
+.name-block h2{
+  padding: 10px;
+  
+}
+
+.name-block h1{
   font-size: 4rem;
-  padding: 0;
-  margin: 0;
-}
 
-.name-block h2 {
-  margin: 0;
-  padding-left: 0.1em; /* optional tweak */
-  font-size: 1.2rem;
-} */
-
-.hero-heading h3 {
-  padding-top: 1rem;
 }
-/* .hero-heading {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    
-}
-.hero-heading h1{
-    font-size: 4rem; 
-    padding:20px;
-}
-
-.hero-heading h2{
-    text-align: left;
-    
-} */
 
 .hero h3{
     text-align: center;
     padding-bottom: 50px;
+    padding-top: 10px;
 }
 .gradient-text {
     background: linear-gradient(90deg, var(--color-purple), var(--color-pink));
