--- a/src/Hero.css
+++ b/src/Hero.css
@@ -1,5 +1,18 @@
 @import "./vars.css";
 
+
+@keyframes fadeIn{
+  0% {
+    transform:translate(20px);
+    opacity: 0;
+
+  }
+  100%{
+    opacity: 1;
+    transform: translate(0);
+
+  }
+}
 .hero{
     text-align: center;
     padding: 200px 20px;
@@ -11,7 +24,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-
+  animation: fadeIn 1s ease-out forwards;
 }
 
 .name-block{
