--- a/src/NavBar.css
+++ b/src/NavBar.css
@@ -1,5 +1,16 @@
 @import "./vars.css";
 
+@keyframes dropIn{
+    0% {
+        transform: translateY(-100px);
+        opacity: 0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
 /* 
 .navbar ul{
     list-style-type: none;
@@ -86,7 +97,16 @@
     
     margin: 0;
     padding: 0;
+    animation: dropIn 1s ease-out forwards; 
+    /* forwards use to make it stay in final state*/
 }
+
+/* but want to make it happen one by one so need to add delay to each nav item*/
+.nav-links li:nth-child(1) {animation-delay: 0.3s;}
+.nav-links li:nth-child(2) {animation-delay: 0.4s;}
+.nav-links li:nth-child(3) {animation-delay: 0.5s;}
+.nav-links li:nth-child(4) {animation-delay: 0.6s;}
+.nav-links li:nth-child(5) {animation-delay: 0.7s;}
 
 .nav-links li a{
     text-decoration: none;
