--- a/src/About.css
+++ b/src/About.css
@@ -1,10 +1,21 @@
 @import "./vars.css";
 
+@keyframes fadeInUp{
+    0%{
+        transform: translateY(40px);
+        opacity:0;
+    }
+    100%{
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+/* transition instead of animation because only trigger when scroll and enter viewport*/
 .about-section{
     padding: 200px 20px;
     background-color: var(--color-bg);
     color: var(--color-text);
-
 }
 
 .about-content{
@@ -20,6 +31,15 @@
     flex: 1 1 500px;
     padding-right: 2rem;  
     padding-left: 10rem;
+    opacity: 0;
+    transform: translate(40px);
+    transition: all 1s ease-out;
+    
+}
+
+.about-text.visible{
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .about-text h2{
@@ -33,7 +53,14 @@
     flex: 1 1 300px;
     padding: 0.5rem;
     align-items: center;
-    
+    opacity: 0;
+    transform: translateY(40px);
+    transition: all 1s ease-out;
+}
+
+.about-image.visible{
+    opacity: 1;
+    transform: translateY(0);
 }
 
 .about-image img {
