--- a/src/Work.css
+++ b/src/Work.css
@@ -15,7 +15,7 @@
 .work-section h2{
     display: flex;
     align-items: center;
-    gap: 0.4rem;
+    gap: 0.2rem;
     font-size: 2rem;
     width: 100%;
     text-align: left;
@@ -60,7 +60,7 @@
 
 .work-info p{
     font-size: 0.8rem;
-    padding-bottom: 10px;
+    padding-bottom: 5px;
 
 }
 .work-img img{
@@ -69,18 +69,18 @@
     border: var(--color-purple);
     border-width: 20px;
     object-fit: cover;
-    border-radius: 10px;
-    padding: 20px;
+    border-radius: 20px;
+    padding: 5px;
 }
 
 .work-title-container{
-    gap: 0.5rem;
+    gap: 0rem;
     display: flex;
     align-items: center;
     
 }
 
-.work-title-container .fa-brands fa-github{
-    font-size: 3rem;
+.work-title-container .fa-github{
+    font-size: 2rem;
     color: var(--color-text);
 }
