--- a/src/Contact.css
+++ b/src/Contact.css
@@ -17,9 +17,17 @@
     background-color: var(--color-bg);
     color: var(--color-text);
     text-align: center;
-} 
+}  
 
 
+.contact-section h2{
+    font-size: 3rem;
+    margin-bottom: 20px;
+}
+
+.contact-section h3{
+    font-size: 1.5rem;
+}
 
 .icons{
     text-align: center;
@@ -49,19 +57,26 @@
     padding: 20px;
 }
 
-.footer {
-    /*margin-top: 200px;*/
-    
-    margin-top: auto;
-    text-align: center;
-    padding: 1rem 0;
-    font-size: 0.8rem;
-}
-    
 
+.footer {
+    text-align: center;
+
+}
 
 .footer p {
-    justify-content: center;
-    font-size: 0.7rem;
-    
+    font-size: 0.8rem;
+    margin: 0;
 }
+/* 
+.footer {
+    position: fixed;
+    width: 100%;
+    text-align: center;
+    bottom: 10px;
+}
+
+.footer p {
+    font-size: 0.8rem;
+}
+     */
+
